--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,92 @@
-# Python cache files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 *.pyc
 *.pyo
+*.pyd
 
-# Virtual environment
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Virtual environments
 venv/
 env/
 .venv/
+.env/
+ENV/
+env.bak/
+venv.bak/
+
+# Django specific
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+static_root/
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+# Secret key and sensitive data
+secret_key.txt
+*.key
+*.pem
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS generated files
 .DS_Store
@@ -25,13 +97,35 @@ env/
 ehthumbs.db
 Thumbs.db
 
-# Logs
-*.log
+# Backup files
+*.bak
+*.backup
 
 # Temporary files
 *.tmp
 *.temp
-*~
+
+# Logs
+logs/
+*.log
+
+# Node modules (if using Node.js for frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Collected static files (for production)
+/static/
+/staticfiles/
 
 # Local settings (if you add them later)
 local_settings.py
+
+# Heroku
+.env
+
+# Docker
+.dockerignore
+Dockerfile
+docker-compose.yml
